fix button overlap on landing page

--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -147,6 +147,18 @@
   border-radius: 10px;
 }
 
-.logInCTA {
+.logInCTA,
+.createAccountCTA {
   margin: 0 0 32px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.logInBtn {
+  color: white;
+}
+
+.createAccountCTA > p {
+  margin-bottom: 8px;
 }
